schema/testdata/errors/unique_messages.keel
//expect-error:9:12:NamingError:There already exists a model with the name 'Foo'
//expect-error:9:12:NamingError:There already exists an enum with the name 'Foo'
//expect-error:9:12:NamingError:There already exists a message with the name 'Foo'
message Foo {
    bar Text
}

//expect-error:9:12:NamingError:There already exists a message with the name 'Foo'
//expect-error:9:12:NamingError:There already exists an enum with the name 'Foo'
//expect-error:9:12:NamingError:There already exists a model with the name 'Foo'
message Foo {
    baz Text
}

//expect-error:7:10:NamingError:There already exists a message with the name 'Foo'
//expect-error:7:10:NamingError:There already exists an enum with the name 'Foo'
model Foo {
}

//expect-error:6:9:NamingError:There already exists a model with the name 'Foo'
//expect-error:6:9:NamingError:There already exists a message with the name 'Foo'
enum Foo {
}
